overlays/istio/0-namespace-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-discovery: "enabled"
    istio-injection: "enabled"
