overlays/istio/4-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ui-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
