overlays/istio/3-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: istio-ingress
spec:
  to:
    name: istio-ingressgateway
    weight: 100
    kind: Service
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  port:
    targetPort: http2
